modelr-0.5.4 September 16 2014
Upped gain control to 10, added metadata to all the 
scenario scripts

modelr-0.5.3 August 31 2014
Added a simple spatial plot, noise modeling, gain control,
and a maximum angle for the AVO gradient

modelr-0.5.2.1 June 20
Updated avo plots, upgraded agilegeo build, fixed slider bar plots

modelr-0.5.2
moved headers out of the sub process

modelr-0.5.1
turned off the profiler

modelr-0.5
Added hdf5 file writing support, json passbacks, and new forward
model api

modelr-0.4.1
Threaded server

modelr-0.3.1-alpha
Limited use case scripts for a public release.

modelr-0.2.2-alpha
Uses SVG drawing scripts to build models, deprecated most of the old
scripts. Moved scientific code into the agilegeo library, refactored
most of the plotting code. Added stochastic avo scripts and unit tests