@@ -1,4 +1,5 @@
-agilegeo
+bruges
+PIL
 jinja2
 pypng
 requests
