@@ -1,2 +1,2 @@
-0.5.4
+0.6
 
