@@ -1,3 +1,6 @@
+modelr-0.6 October 26 2015
+Added cleaner API linking to front end.
+
 modelr-0.5.4 September 16 2014
 Upped gain control to 10, added metadata to all the 
 scenario scripts
